solid/src/main/java/org/example/L/good/Bird.java
package org.example.L.good;

public class Bird {

}
